# python-poetry-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: app.py
